# minishell

./: CMakeLists.txt  Makefile  Makefile_old  access_dir.c  default_command_utils_1.c  default_command_utils_2.c  default_command_utils_3.c  default_commands_1.c  default_commands_2.c  default_commands_3.c  default_commands_4.c  default_commands_5.c  error.c  exec_pipe.c  exec_start.c  exec_utils.c  free_utils.c  main.c  minishell  minishell.c  minishell.h  parser_main.c  parser_utils.c  preparser.c  redirect.c  redirect_input.c  redirect_utils.c  shell_split.c  shell_utils_1.c  shell_utils_2.c  sig_handlers.c  split.c  utils_1.c  utils_2.c  utils_3.c  utils_4.c  utils_5.c
src/: error.c  main.c  minishell.c  parser_main.c  parser_utils.c  preparser.c  redirect.c  redirect_output.c  redirect_utils.c  shell_split.c  sig_handlers.c
src/libft/: Makefile  libft.h
src/libft/bonus_part/: ft_lstadd_back.c  ft_lstadd_front.c
src/libft/mandatory_pt2/: ft_split_ex.c
